[package]
name = "github-actions-runner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
requestr = {path = "../requestr"}
snafu = "0.7.0-beta.0"
serde = {version = "1.0.128",features=["derive"]}
serde_json = "1.0.66"
kiruna = {git = "https://github.com/drewcrawford/kiruna",features=["join"]}
command-rs = {path = "../command-rs",features=["output"]}
pcore = {path = "../pcore"}

[dev-dependencies]
kiruna = {git = "https://github.com/drewcrawford/kiruna",features=["test"]}